--- a/quizlist/quiz1.html
+++ b/quizlist/quiz1.html
@@ -39,7 +39,7 @@
     start = null;
     var resulttime = sec;
     var time = document.getElementById("time");
-    time.innerHTML = "回答時間：" + sec + "秒";
+    time.innerHTML = "解答時間：" + sec + "秒";
     var answer = document.getElementById("answer");
     answer.innerHTML = "答え：" + "20";
     var hidden1 = document.getElementById("hidden1");
@@ -77,11 +77,11 @@
 <h2>問題1</h2>
 <div>学校の2年生の子供達は、道路の脇に植木を行った。 子供達は2メートルごとに木を植え（道路の両端にも植えた）、最終的に合計11本の木を植えた。この小道は何メートルの長さ？</div>
 <br>
-<h2>回答欄</h2>
+<h2>解答欄</h2>
 
 <form id="form2" action="#">
 <input type="text" id="message" name="message">
-<input type="button" id="sendbutton" disabled required onclick="stopTimer()" value="回答">
+<input type="button" id="sendbutton" disabled required onclick="stopTimer()" value="解答">
 
 <br>
 <div id="time"></div>
